[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/players/playerProj.gd" type="Script" id=1]
[ext_resource path="res://art/vfx/player_projectiles.png" type="Texture" id=2]

[sub_resource type="BoxShape" id=42]
extents = Vector3( 1.5, 1.5, 1.5 )

[sub_resource type="AtlasTexture" id=41]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 18, 0, 18, 16 )

[sub_resource type="AtlasTexture" id=36]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 18, 16 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 41 ) ],
"loop": true,
"name": "arrow",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ) ],
"loop": false,
"name": "rock",
"speed": 5.0
} ]

[sub_resource type="CylinderShape" id=39]
radius = 0.5
height = 0.75

[sub_resource type="CylinderMesh" id=40]
top_radius = 0.5
bottom_radius = 0.5
height = 0.1
rings = 1

[node name="proj" type="Area"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 8192
collision_mask = 0
monitoring = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 42 )

[node name="zeroPoint" type="Spatial" parent="."]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="zeroPoint"]
transform = Transform( -4.37114e-08, 0.258819, 0.965926, 0, 0.965926, -0.258819, -1, -1.13133e-08, -4.2222e-08, 0, 0, 0 )
layers = 3
pixel_size = 0.07
alpha_cut = 1
frames = SubResource( 38 )
animation = "arrow"

[node name="hitbox" type="Area" parent="zeroPoint"]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape" type="CollisionShape" parent="zeroPoint/hitbox"]
shape = SubResource( 39 )

[node name="shadowMaker" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
cast_shadow = 3
mesh = SubResource( 40 )
material/0 = null

[node name="despawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_proj_area_entered"]
[connection signal="timeout" from="despawnTimer" to="." method="_on_despawnTimer_timeout"]
